--- a/artifacts/contracts/DappVotes.sol/DappVotes.dbg.json
+++ b/artifacts/contracts/DappVotes.sol/DappVotes.dbg.json
@@ -1,4 +1,4 @@
 {
   "_format": "hh-sol-dbg-1",
-  "buildInfo": "../../build-info/0a7c3a8bc405b9e9ec9b6954f55cefa5.json"
+  "buildInfo": "..\\..\\build-info\\4845a01e9b2a82bf60c470ece9c97a25.json"
 }
