--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-icons": "4.8.0",
     "react-identicons": "1.2.5",
     "react-redux": "8.0.5",
-    "react-toastify": "9.1.2"
+    "react-toastify": "9.1.2",
+    "zustand": "5.0.2"
   },
   "devDependencies": {
     "@emotion/react": "11.10.5",
