--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
   "dependencies": {
     "@openzeppelin/test-helpers": "0.5.16",
     "@reduxjs/toolkit": "1.9.3",
+    "axios": "1.7.9",
     "ethers": "^5.4.7",
+    "form-data": "4.0.1",
     "next": "13.1.2",
+    "pinata": "1.10.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "4.8.0",
